--- a/book/dasp/02_FIR_design.ipynb
+++ b/book/dasp/02_FIR_design.ipynb
@@ -268,7 +268,7 @@
     "\n",
     "2. The filter in its current form is **acausal**, i.e., the outputs of the filter depend on future input samples.\n",
     "\n",
-    "Let's firstly tackle the problem of truncating the filter. We define an FIR **filter order**, $P$, as a truncation that yields $P-1$ coefficients. A straight forward way to truncate the filter is to simply select some set of samples of the filter before and after $n=0$ such that the symmetry of the filter is preserved. So for instance, we may choose the coefficients: $h[-10], h[-9], h[-8], \\dots, h[0], \\dots, h[8], h[9], h[10]$, giving us 21 samples and hence an FIR filter of order 20. This in fact corresponds to applying a rectangular window of 21 samples that is centred around $h[0]$.\n",
+    "Let's firstly tackle the problem of truncating the filter. We define an FIR **filter order**, $P$, as a truncation that yields $P+1$ coefficients. A straight forward way to truncate the filter is to simply select some set of samples of the filter before and after $n=0$ such that the symmetry of the filter is preserved. So for instance, we may choose the coefficients: $h[-10], h[-9], h[-8], \\dots, h[0], \\dots, h[8], h[9], h[10]$, giving us 21 samples and hence an FIR filter of order 20. This in fact corresponds to applying a rectangular window of 21 samples that is centred around $h[0]$.\n",
     "\n",
     "Hence a more mathematically elegant and general way to truncate the FIR filter is to multiply $h[n]$ by a [symmetrical window](https://randyaliased.github.io/acspjbook/main/fundamental/08_Windows.html#), $w[n]$. Hence a windowed FIR filter, $h_{w}[n]$ of order $P$ can be obtained as\n",
     "\n",
