--- a/book/fundamental/08_Windows.ipynb
+++ b/book/fundamental/08_Windows.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
     "# sinc function \n",
     "f = np.arange(-50, 50, 1) # frequency array\n",
     "\n",
-    "fig, ax = plt.subplots(2,1, figsize=(7,4))\n",
+    "fig, ax = plt.subplots(2,1, figsize=(6,4))\n",
     "\n",
     "line, = ax[0].plot([], [])\n",
     "vlines = ax[0].vlines([], 0, 1, color='gray', alpha=0.4)\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
     "\n",
     "\n",
     "# PLOTS\n",
-    "fig, ax = plt.subplots(2,2, figsize=(8,4))\n",
+    "fig, ax = plt.subplots(2,2, figsize=(7,4))\n",
     "plt.subplots_adjust(wspace=0.4, hspace=0.7)\n",
     "winplot, = ax[0,0].plot([], [], linewidth=2)\n",
     "ax[0,0].set_xlabel('Number of samples')\n",
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
     "    t = np.arange(0, T, 1/fs)\n",
     "\n",
     "    # Defaults window\n",
-    "    if win is 'None':\n",
+    "    if win == 'None':\n",
     "        win = signal.get_window('boxcar', N) # default to rectangular window if none provided\n",
     "\n",
     "    x_win = x * win # apply window to the signal\n",
