--- a/book/dasp/01_IR_Conv.ipynb
+++ b/book/dasp/01_IR_Conv.ipynb
@@ -297,11 +297,14 @@
     "\n",
     "We can think of this matrix-vector product in two ways:\n",
     "\n",
-    "1. Inner products of each row of $\\mathbf{H}$ with the input, $\\mathbf{x}$. This in fact corresponds to the picture we previously illustrated, where the impulse response is flipped and continuously shifted over the input signal.\n",
+    "1. Each sample corresponds to an inner products of each row of $\\mathbf{H}$ with the input, $\\mathbf{x}$. This in fact corresponds to the picture we previously illustrated, where the impulse response is flipped and continuously shifted over the input signal.\n",
     "\n",
-    "$$\\begin{equation}\n",
-    "\\begin{bmatrix} y[0] \\\\ y[1] \\\\ y[2] \\\\ y[3] \\\\ y[4] \\\\ y[5] \\end{bmatrix} = \\begin{bmatrix} h[0] & 0 & 0 & 0  \\end{bmatrix} \\begin{bmatrix} x[0] \\\\ x[1] \\\\ x[2] \\\\ x[3] \\end{bmatrix}  + \\begin{bmatrix} h[1] & h[0] & 0 & 0 \\end{bmatrix} \\begin{bmatrix} x[0] \\\\ x[1] \\\\ x[2] \\\\ x[3] \\end{bmatrix}  + \\dots +  \\begin{bmatrix} 0 & 0 & 0 & h[2] \\end{bmatrix} \\begin{bmatrix} x[0] \\\\ x[1] \\\\ x[2] \\\\ x[3] \\end{bmatrix} \n",
-    "\\end{equation}$$\n",
+    "$$\\begin{align}\n",
+    "y[0] &= \\begin{bmatrix} h[0] & 0 & 0 & 0  \\end{bmatrix} \\begin{bmatrix} x[0] \\\\ x[1] \\\\ x[2] \\\\ x[3] \\end{bmatrix}  \\\\\n",
+    "y[1] &= \\begin{bmatrix} h[1] & h[0] & 0 & 0 \\end{bmatrix} \\begin{bmatrix} x[0] \\\\ x[1] \\\\ x[2] \\\\ x[3] \\end {bmatrix}  \\\\\n",
+    " & \\vdots \\hspace{1cm} \\vdots \\hspace{2cm} \\vdots\\\\\n",
+    "y[5] &=  \\begin{bmatrix} 0 & 0 & 0 & h[2] \\end{bmatrix} \\begin{bmatrix} x[0] \\\\ x[1] \\\\ x[2] \\\\ x[3] \\end{bmatrix} \n",
+    "\\end{align}$$\n",
     "\n",
     "\n",
     "\n",
