fir filt design

--- a/book/dasp/02_FIR_design.ipynb
+++ b/book/dasp/02_FIR_design.ipynb
@@ -65,7 +65,7 @@
     "where $H(f)$ is the Fourier transform of $h[n]$ that is continuous in frequency, $f$, (Hz) (recall that $H(f)$ will be complex-valued) and $f_{s}$ is the sampling frequency (Hz). Note that we can equivalently write this in terms of the angular frequency (radians/second), $\\omega = 2 \\pi f$, but we will keep things in terms of frequency (Hz). And of course, we can also go the other way around, i.e., given $H(f)$, we can recover the discrete-time signal, $h[n]$ via the inverse DTFT:\n",
     "\n",
     "$$\\begin{align} \n",
-    "\th[n] &= \\frac{1}{f_{s}} \\int\\limits_{-f_{s}/2}^{f_{s}/2}H(f)e^{j \\frac{2 \\pi f}{f_s} n}\n",
+    "\th[n] &= \\frac{1}{f_{s}} \\int\\limits_{-f_{s}/2}^{f_{s}/2}H(f)e^{j \\frac{2 \\pi f}{f_s} n} df\n",
     "\\end{align}$$\n",
     "\n",
     "This gives us a convenient starting point for designing digital filters. If it is that we have some ideal frequency response specified by $H(f)$, then we can obtain the filter coefficients in the time-domain by doing an inverse DTFT.\n",
