fir filt design

--- a/book/dasp/02_FIR_design.ipynb
+++ b/book/dasp/02_FIR_design.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
     "\n",
     "h_plot, = ax.plot([], [],'-o') \n",
     "\n",
-    "ax.set_xlabel('Number of samples')\n",
+    "ax.set_xlabel('n')\n",
     "ax.set_ylabel('Amplitude')\n",
     "ax.set_title('Filter coefficients of an ideal low-pass filter')\n",
     "ax.set_xlim([-40, 40])\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -376,14 +376,14 @@
     "# Time domain plots\n",
     "timesinc, = ax[0,0].plot(n, x_sinc/np.max(x_sinc), label = 'h[n] (norm)') # normalizing just to visualize it better (not used in computations)\n",
     "timewin, = ax[0,0].plot([],[], label='w[n]')\n",
-    "ax[0,0].set_xlabel('Number of samples')\n",
+    "ax[0,0].set_xlabel('n')\n",
     "ax[0,0].set_ylabel('Amplitude')\n",
     "ax[0,0].set_xlim([-100, 100])\n",
     "ax[0,0].set_ylim([-0.3,1.1])\n",
     "ax[0,0].legend(loc='upper left')\n",
     "\n",
     "windowedplot, = ax[1,0].plot([], [])\n",
-    "ax[1,0].set_xlabel('Number of samples')\n",
+    "ax[1,0].set_xlabel('n')\n",
     "ax[1,0].set_ylabel('Amplitude')\n",
     "ax[1,0].set_xlim([-100, 100])\n",
     "ax[1,0].set_ylim([-0.3,1.1])\n",
