fir filt design

--- a/book/dasp/02_FIR_design.ipynb
+++ b/book/dasp/02_FIR_design.ipynb
@@ -218,7 +218,7 @@
     "\n",
     "Okay so this is great, we now have an analytical expression for $h[n]$, i.e., we have an impulse response for our ideal low-pass filter for any $f_{c}$ and $f_{s}$ we choose. Now it's should just be a matter of doing a convolution between some input signal, $x[n]$ and the filter coefficients, $h[n]$ to obtain a low-pass filtered version of our input signal! But unfortunately there are still two practical issues:\n",
     "\n",
-    "1. The expression for $h[n]$ holds for $n = -\\infty$ to $\\infty$, which means that we need an infinite number of filter coefficients to filter our input signal in accordance with the ideal low-pass filter. This is impractical, so we must truncate the IIR filter to a finite number of coefficients somehow, thus making it an FIR filter.\n",
+    "1. The expression for $h[n]$ holds for $n = -\\infty$ to $\\infty$, which means that we need an infinite number of filter coefficients to filter our input signal in accordance with the ideal low-pass filter. To make an FIR version of the filter, we must truncate the IIR filter to a finite number of coefficients somehow.\n",
     "\n",
     "2. The filter in its current form is **acausal**, i.e., the outputs of the filter depend on future input samples.\n",
     "\n",
