--- a/book/dasp/02_FIR_design.ipynb
+++ b/book/dasp/02_FIR_design.ipynb
@@ -366,6 +366,7 @@
     "# We'll use the signal.get_window function to obtain the windows.\n",
     "# Add more to this list as you wish from the available ones: \n",
     "# https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.windows.get_window.html#scipy.signal.windows.get_window\n",
+    "# Something to note here - for some reason get_window is not returning fully symmetric windows (compare with np.hanning etc.). \n",
     "\n",
     "window_types = ['boxcar', 'hann', 'blackman', 'hamming', 'flattop'] \n",
     "\n",
