--- a/book/dasp/03_Z_domain.ipynb
+++ b/book/dasp/03_Z_domain.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the necessary packages as usual\n",
-    "#%pip install ipympl\n",
+    "%pip install ipympl\n",
     "import numpy as np \n",
     "import scipy as sp\n",
     "from scipy import signal\n",
@@ -118,7 +118,7 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "H(z)  &= g \\frac{(1-q_1z^{-1}) (1-q_2z^{-1}) \\dots (1-q_Kz^{-K})   }{(1-p_1z^{-1}) (1-p_2z^{-1}) \\dots (1-p_Kz^{-K})}\\nonumber\n",
+    "H(z)  &= g \\frac{(1-q_1z^{-1}) (1-q_2z^{-1}) \\dots (1-q_Kz^{-1})   }{(1-p_1z^{-1}) (1-p_2z^{-1}) \\dots (1-p_Kz^{-1})}\\nonumber\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
@@ -151,25 +151,25 @@
     "from which we can see $H(z) = 0$ when $z=0$ and hence a zero, $q_1 = 0$, and $1/H(z) = 0$ when $z = a_1$, hence a pole, $p_1 = a_1$. \n",
     "In terms of magnitude of phase of the pole, in this case, its magnitude is $a_1$ and phase is zero. In the examples that follow, we'll look at examples of poles and zeros whose phases are non-zero. \n",
     "\n",
-    "But let's get to the plot to understand how the position of the pole affects this first order filter. Below, you can move the slider to change the value of the pole, which is plotted on the complex plane (a pole-zero plot). Also plotted in the complex plane is the unit circle (radius = 1). Hence if the pole position extends beyond the unit circle, the filter goes unstable. And what do we mean by instability? Well on the right-hand plot, we also show the resulting output $y[n]$ from the difference equation to a unit impulse input.  "
+    "But let's get to the plot to understand how the position of the pole affects this first order filter. Below, you can move the slider to change the value of the pole, which is plotted on the complex plane (a pole-zero plot). Also plotted in the complex plane is the unit circle (radius = 1). Hence if the pole position extends beyond the unit circle, the filter goes unstable. And what do we mean by instability? Well on the right-hand plot, we also show the resulting output $y[n]$ from the difference equation to a unit impulse input. We can see that once the magnitude of the pole is greater than 1 (outside of the unit circle), the output grows in an unbounded manner! "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Move the slider to evaluate the magnitude response for different frequencies (Hz)!\n"
+      "Move the slider to change the value of a1, and hence the pole position in the complex plane.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9c80cfdaa774575aa17af2e4d185658",
+       "model_id": "7dae098465e942ccbb686844e2fcb593",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,7 +183,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1d1f9b536ce4e539a28929431784d41",
+       "model_id": "48b27c7bc9394bd2b326033b0ca36203",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,27 +207,18 @@
     }
    ],
    "source": [
-    "\n",
-    "bo = 1\n",
-    "a1 = 0.5\n",
-    "\n",
-    "\n",
+    "# Setting up the input/output signals\n",
     "N = 50\n",
     "n_idx = np.arange(0,N,1)\n",
     "x = np.zeros(len(n_idx)); x[0] = 1\n",
     "y = np.zeros(len(n_idx))\n",
     "\n",
     "\n",
-    "# Parameter Set up\n",
-    "\n",
-    "\n",
-    "xO,yO = (0,0)  # origin\n",
-    "UnitCircle = patches.Circle((0.0, 0.0), radius=1,edgecolor=\"black\",facecolor=\"none\")\n",
-    "\n",
     "\n",
     "# PLOT\n",
     "fig, axes = plt.subplots(1,2,figsize=(8,4))\n",
     "pole_color = \"purple\"; zero_color = \"darkorange\"    \n",
+    "UnitCircle = patches.Circle((0.0, 0.0), radius=1,edgecolor=\"black\",facecolor=\"none\")\n",
     "\n",
     "# # Unit Circle plot\n",
     "axes[0].add_patch(UnitCircle) \n",
@@ -274,15 +265,15 @@
     "    # computing yn\n",
     "    for n in n_idx:\n",
     "        if n==0:\n",
-    "            y[n] = bo*x[n]\n",
+    "            y[n] = x[n]\n",
     "        else:\n",
-    "            y[n] = bo*x[n] - a1*y[n-1]\n",
+    "            y[n] = x[n] - a1*y[n-1]\n",
     "\n",
     "    p1.set_data([a1], [0])\n",
     "    line.set_data([n_idx], [y])\n",
     "    fig.canvas.draw_idle()\n",
     "\n",
-    "print('Move the slider to evaluate the magnitude response for different frequencies (Hz)!')\n",
+    "print('Move the slider to change the value of a1, and hence the pole position in the complex plane.')\n",
     "interact(update, a1 = (0.1,1.2,0.01)); \n",
     "\n",
     "\n"
@@ -294,14 +285,58 @@
    "source": [
     "### Frequency response of digital filters\n",
     "\n",
-    "z = $e^{j \\omega T_s}$\n",
-    "geometric interpretation... \n",
-    "Frequency response interpretations..."
+    "Okay we've seen how poles and zeros can impact the time domain filter outputs, but what about the frequency response? Let's recall our Z-transform definition:\n",
+    "\n",
+    "$$\n",
+    "\\mathcal{Z}(x[n]) = X(z) = \\sum_{n = -\\infty}^{\\infty} x[n]z^{-n}\n",
+    "$$\n",
+    "\n",
+    "If we make the substitution $z = e^{j \\omega T_s}$, where we recall that $\\omega = 2 \\pi f$ is the angular frequency (rad/s), $f$ is the frequency in Hz, and $T_s = 1/f_s$ is the sampling period (s) with $f_s$ the sampling frequency (Hz), then we obtain:\n",
+    "\n",
+    "$$\n",
+    "X(e^{j \\omega T_s}) = \\sum_{n = -\\infty}^{\\infty} x[n]e^{-j \\omega T_s n} = \\sum_{n = -\\infty}^{\\infty} x[n]e^{-j 2 \\pi f T_s n}\n",
+    "$$\n",
+    "\n",
+    "which is exactly the [discrete-time Fourier transform](https://randyaliased.github.io/acspjbook/main/fundamental/07_DFT.html#discrete-time-fourier-transform-dtft) we previously encountered! Hence by simply substituting $z = e^{j \\omega T_s}$ into the transfer function, $H(z)$ of a filter, we can obtain its frequency response (i.e., its magnitude and phase across frequency). But what does $e^{j \\omega T_s}$ correspond to? Well it's a complex number with magnitude of 1 and a phase of $\\omega T_s$, hence for a fixed sampling frequency, as frequency increases, the phase $\\omega T_s$ increases and we will essentially trace out the unit circle (magnitude one). Hence an evaluation of the frequency response corresponds to evaluation the Z-transform on the unit circle! We'll see a visual of this shortly, but let's firstly look at the relation again to poles and zeros.\n",
+    "\n",
+    "\n",
+    "Let's consider our pole-zero factorised form of $H(z)$, substitute $z = e^{j \\omega T_s}$, and do some simple factorization:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "H(z)  &= g \\frac{(1-q_1z^{-1}) (1-q_2z^{-1}) \\dots (1-q_Kz^{-1})   }{(1-p_1z^{-1}) (1-p_2z^{-1}) \\dots (1-p_Kz^{-1})}\\nonumber \\\\\n",
+    "\\nonumber \\\\\n",
+    "H(e^{j \\omega T_s})  &= g \\frac{(1-q_1e^{-j \\omega T_s}) (1-q_2e^{-j \\omega T_s}) \\dots (1-q_Ke^{-j \\omega T_s})   }{(1-p_1e^{-j \\omega T_s}) (1-p_2e^{-j \\omega T_s}) \\dots (1-p_Ke^{-j \\omega T_s})}\\nonumber \\\\\n",
+    "\\nonumber \\\\\n",
+    " &= g \\frac{e^{-j K \\omega T_s}}{e^{-j K \\omega T_s}} \\frac{(e^{j \\omega T_s}-q_1) (e^{j \\omega T_s}-q_2) \\dots (e^{j \\omega T_s}-q_K)   }{(e^{j \\omega T_s}-p_1) (e^{j \\omega T_s}-p_2) \\dots (e^{j \\omega T_s}-p_K)}\\nonumber \\\\\n",
+    "\\\\\n",
+    " &= g \\frac{(e^{j \\omega T_s}-q_1) (e^{j \\omega T_s}-q_2) \\dots (e^{j \\omega T_s}-q_K)   }{(e^{j \\omega T_s}-p_1) (e^{j \\omega T_s}-p_2) \\dots (e^{j \\omega T_s}-p_K)}\\nonumber \n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "What we can observe is that all of the factorised terms are a difference between $e^{j \\omega T_s}$ and the respective pole or zero. Now let's take the magnitude of the expression. Recall the rule that $|AB| = |A| |B|$ (where $|.|$ refers to taking the magnitude of a complex number):\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "|H(e^{j \\omega T_s}) | & = \\left| g \\frac{(e^{j \\omega T_s}-q_1) (e^{j \\omega T_s}-q_2) \\dots (e^{j \\omega T_s}-q_K)   }{(e^{j \\omega T_s}-p_1) (e^{j \\omega T_s}-p_2) \\dots (e^{j \\omega T_s}-p_K)} \\right| \\nonumber \\\\\n",
+    "\\\\ \\nonumber\n",
+    "& =  g \\frac{|(e^{j \\omega T_s}-q_1) (e^{j \\omega T_s}-q_2) \\dots (e^{j \\omega T_s}-q_K)  | }{|(e^{j \\omega T_s}-p_1) (e^{j \\omega T_s}-p_2) \\dots (e^{j \\omega T_s}-p_K)|}  \\nonumber \\\\\n",
+    "\\\\ \\nonumber\n",
+    "&= g \\frac{|(e^{j \\omega T_s}-q_1)| . |(e^{j \\omega T_s}-q_2)| \\dots |(e^{j \\omega T_s}-q_K)|   }{|(e^{j \\omega T_s}-p_1)| . |(e^{j \\omega T_s}-p_2)| \\dots |(e^{j \\omega T_s}-p_K)|} \n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "This equation brings us to a really nice geometric interpretation. Each of the individual magnitude terms correspond to the length of a vector drawn from the respective zero or pole to the point $e^{j \\omega T_s}$. Hence, we can interpret the Magnitude response of the filter at any frequency $f$ (or $\\omega$) as the ratio:\n",
+    "\n",
+    "$$\n",
+    "|H(e^{j \\omega T_s}) | = \\frac{\\text{product of lengths of vectors drawn from zeros to point $e^{j \\omega T_s}$}}{\\text{product of lengths of vectors drawn from poles to point $e^{j \\omega T_s}$}}\n",
+    "$$\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +350,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8102868230d8475a9b00dc275bdc4834",
+       "model_id": "6690e353245d405a8071fb70db42fb22",
        "version_major": 2,
        "version_minor": 0
       },
@@ -329,7 +364,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f16c8448aea4e108bb6a71f2685bf2f",
+       "model_id": "b332da58d5e943d485ebad20601a1c2d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -354,8 +389,7 @@
    ],
    "source": [
     "\n",
-    "# Set your pole-zero locations here:\n",
-    "    \n",
+    "# Set your pole-zero locations here:    \n",
     "rz, thetaz = [0.5, np.pi/6] \n",
     "z1_re, z1_im = [rz*np.cos(thetaz), rz*np.sin(thetaz)]\n",
     "\n",
@@ -363,9 +397,7 @@
     "p1_re, p1_im = [rp*np.cos(thetap), rp*np.sin(thetap)]\n",
     "\n",
     "\n",
-    "\n",
     "# Parameter Set up\n",
-    "\n",
     "fs = 8000\n",
     "Ts = 1/fs   # sampling period Ts\n",
     "df = 10\n",
