--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -169,7 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7dae098465e942ccbb686844e2fcb593",
+       "model_id": "a7e3bf0671504ffb9456334176289559",
        "version_major": 2,
        "version_minor": 0
       },
@@ -183,7 +183,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48b27c7bc9394bd2b326033b0ca36203",
+       "model_id": "1c10e23f540f4787957f0d206b302c63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,12 +331,33 @@
     "$$\n",
     "|H(e^{j \\omega T_s}) | = \\frac{\\text{product of lengths of vectors drawn from zeros to point $e^{j \\omega T_s}$}}{\\text{product of lengths of vectors drawn from poles to point $e^{j \\omega T_s}$}}\n",
     "$$\n",
+    "\n",
+    "For the phase response, we take the angle as follows (recalling the rule that $\\angle (AB/C) = \\angle A + \\angle B - \\angle C$ ):\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    " \\angle H(e^{j \\omega T_s})  &= \\angle g \\frac{(e^{j \\omega T_s}-q_1) (e^{j \\omega T_s}-q_2) \\dots (e^{j \\omega T_s}-q_K)   }{(e^{j \\omega T_s}-p_1) (e^{j \\omega T_s}-p_2) \\dots (e^{j \\omega T_s}-p_K)}\\nonumber \\\\\n",
+    " \\nonumber \\\\ \n",
+    "    &= \\angle g +  \\angle(e^{j \\omega T_s}-q_1) + \\angle (e^{j \\omega T_s}-q_2) + \\dots + \\angle (e^{j \\omega T_s}-q_K) \\nonumber \\\\\n",
+    "    &= - \\angle (e^{j \\omega T_s}-p_1) - \\angle (e^{j \\omega T_s}-p_2)- \\dots - \\angle (e^{j \\omega T_s}-p_K)\\nonumber \n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Hence we can interpret the Phase response of the filter at any frequency $f$ (or $\\omega$) as:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\angle H(e^{j \\omega T_s}) &= \\text{offset} + \\text{sum of angles of vectors drawn from zeros to point $e^{j \\omega T_s}$} \\nonumber \\\\\n",
+    "      &= − \\text{sum of angles of vectors drawn from poles to point $e^{j \\omega T_s}$}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +371,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6690e353245d405a8071fb70db42fb22",
+       "model_id": "fc499b9d4bd242d4bf00754e03cd5e60",
        "version_major": 2,
        "version_minor": 0
       },
@@ -364,7 +385,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b332da58d5e943d485ebad20601a1c2d",
+       "model_id": "6b76f94ded8f43debd7b099c7dff940b",
        "version_major": 2,
        "version_minor": 0
       },
