--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -127,7 +127,7 @@
     "- $q_k$ (for k = 1, 2, …, K) are called the **zeros** of the filter, since if $z = q_k$, then $H(z)=0$ (the numerator of $H(z)$ goes to zero)\n",
     "- $p_k$ (for k = 1, 2, .. K) are called the **poles** of the system, if $z = p_k$, then $1/H(z)=0$ (the denominator of $H(z)$ goes to zero). \n",
     "\n",
-    "Since $z$ is a complex variable, it means that the poles and zeros are, in general, complex-valued and hence can be plotted in the complex plane (imaginary vs. real values). We can also express the poles and zeros in terms of a magnitude and phase, which allows for a convenient/useful geometric interpretation. It turns out that the criterion for stability of LTI digital filters is that **all of the poles are within the unit circle**, i.e., the magnitude of all of the poles must be less than 1.\n",
+    "Since $z$ is a complex variable, it means that the poles and zeros are, in general, complex-valued and hence can be plotted in the complex plane (imaginary vs. real values). We can also express the poles and zeros in terms of a magnitude and phase, which allows for a convenient/useful geometric interpretation. It turns out that the criterion for stability of LTI digital filters is that **all of the poles are within the unit circle**, i.e., the magnitude of all of the poles must be less than 1. The poles and zeros also appear in complex conjugate pairs, which is a consequence of the filter coefficients $a_k$ and $b_k$ being real-valued (we'll also show this later on).\n",
     "\n",
     "### A simple example\n",
     "\n",
@@ -352,12 +352,36 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "\n"
+    "### A two-pole, two-zero example\n",
+    "\n",
+    "Let's get some more intuition for this through an interactive plot. We'll just look at the Magnitude response for a simple two-pole, two-zero filter as follows:\n",
+    "\n",
+    "$$\n",
+    "H(z)  =  \\frac{(1-q_1z^{-1}) (1-q_2z^{-1})}{(1-p_1z^{-1}) (1-p_2z^{-1})}\\nonumber \\\\\n",
+    "$$\n",
+    "\n",
+    "for which the magnitude response will be:\n",
+    "\n",
+    "$$\n",
+    "|H(e^{j\\omega T_s})|  =  \\frac{|(e^{j\\omega T_s}- q_1)| . |(e^{j\\omega T_s}- q_2)|}{|(e^{j\\omega T_s}- p_1)| . |(e^{j\\omega T_s}- p_2)|}\\nonumber \\\\\n",
+    "$$\n",
+    "\n",
+    "This expression already gives us a hint into this filter's frequency response by considering the lengths of vectors drawn from zeros to point $e^{j \\omega T_s}$ and the lengths of vectors drawn from the poles to point $e^{j \\omega T_s}$. For instance, the frequency at which the lengths of vector from the $p_1$ to point $e^{j \\omega T_s}$ (i.e., the term $|(e^{j\\omega T_s}- p_1)|$) is small, then we should expect $|H(e^{j\\omega T_s})| $ to be large, indicative of a resonant boost. \n",
+    "\n",
+    "Let's see this in the following interactive plot, where the left-hand plot shows the complex plane with the unit circle, poles, zeros, and the distances from the zeros and poles to the point $e^{j \\omega T_s}$ (dotted lines) as we increase frequency. On the right-hand plot, as we change the frequency, we can see the corresponding Magnitude response that is being traced out. \n",
+    "\n",
+    "It's important to keep in mind how the frequency in Hz relates to $\\omega T_s$ (i.e., the phase of $e^{j \\omega T_s}$). If we denote $\\phi = \\omega T_s$, and recall $\\omega = 2 \\pi f$, then it should be evident that the frequency, $f$ in Hz is given by:\n",
+    "\n",
+    "$$\n",
+    "f = \\frac{\\phi}{2\\pi T_s} = \\frac{\\phi f_s}{2\\pi} \n",
+    "$$\n",
+    "\n",
+    "When $\\phi = 0$, $f = 0$ Hz, and when $\\phi = \\pi$, $f = f_s/2$ Hz (Nyquist frequency), which explains why the spectrum repeats after $\\phi = \\pi$. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +395,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc499b9d4bd242d4bf00754e03cd5e60",
+       "model_id": "01dff27fd5a04daeae1e6cb8c5c8c205",
        "version_major": 2,
        "version_minor": 0
       },
@@ -385,7 +409,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b76f94ded8f43debd7b099c7dff940b",
+       "model_id": "48149f8ee3eb4ad8a1282b9e1a232097",
        "version_major": 2,
        "version_minor": 0
       },
@@ -410,7 +434,10 @@
    ],
    "source": [
     "\n",
-    "# Set your pole-zero locations here:    \n",
+    "# Feel free to change these pole-zero locations to see the impact! \n",
+    "# Expressing poles/zeros in polar form, but you can use the cartesian form.\n",
+    "# You only need to insert one pole and one zero as the code will generate the complex conjugates.\n",
+    "\n",
     "rz, thetaz = [0.5, np.pi/6] \n",
     "z1_re, z1_im = [rz*np.cos(thetaz), rz*np.sin(thetaz)]\n",
     "\n",
@@ -542,8 +569,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A single parameter adaptive notch filter\n",
+    "### Biquadratic filters\n",
     "\n",
+    "\n",
+    "Recall that the poles and zeros are, in general, complex-valued, and hence we can express them in terms of a magnitude and phase. Since filter coefficients ($a_k$ and $b_k$) are real-valued, the poles and zeros also appear in complex-conjugate pairs. Consequently, we can rewrite $q_1, q_2, p_1,$ and $p_2$ as follows:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "q_1 &= r_z e^{j\\theta_z}; q_2 = r_z e^{-j\\theta_z} \\nonumber \\\\\n",
+    "p_1 &= r_z e^{j\\theta_z}; p_2 = r_z e^{-j\\theta_z}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "where $r_z$ and $\\pm \\theta_z$ are the magnitude and phases of the zeros respectively, and $r_p$ and $\\pm \\theta_p$ are the magnitude and phases of the poles respectively. (Recall that $the complex conjugate of $e^{j\\theta}$ is $e^{-j\\theta}$ (you can prove using Euler's identity)).\n",
+    "\n",
+    "Substituting $z=e^{j\\omega T_s}$ and taking the magnitude to get the magnitude response results in:\n",
+    "\n",
+    "$$\n",
+    "|H(e^{j\\omega T_s})|  =  \\frac{|(e^{j\\omega T_s}- r_z e^{j\\theta_z})| . |(e^{j\\omega T_s}- r_z e^{-j\\theta_z})|}{|(e^{j\\omega T_s}- r_p e^{j\\theta_p})| . |(e^{j\\omega T_s}- r_p e^{-j\\theta_p})|}\\nonumber \\\\\n",
+    "$$\n",
+    "\n",
+    "This expression already gives us a hint into this filter's frequency response by considering the lengths of vectors drawn from zeros to point $e^{j \\omega T_s}$ and the lengths of vectors drawn from the poles to point $e^{j \\omega T_s}$. For instance, when the term $|(e^{j\\omega T_s}- r_p e^{j\\theta_p})|$ \n",
     "\n",
     "#### The constrained biquad filter\n",
     "\n",
