--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -138,6 +138,7 @@
     "$$\n",
     "\n",
     "Taking the Z-transform and rearranging to obtain the transfer function yields:\n",
+    "\n",
     "$$\n",
     "H(z) = \\frac{1}{1 + a_1z^{-1}} \n",
     "$$\n",
@@ -596,7 +597,7 @@
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "where $r_z$ and $\\pm \\theta_z$ are the magnitude and phases of the zeros respectively, and $r_p$ and $\\pm \\theta_p$ are the magnitude and phases of the poles respectively. (Recall that $the complex conjugate of $e^{j\\theta}$ is $e^{-j\\theta}$ (you can prove using Euler's identity)).\n",
+    "where $r_z$ and $\\pm \\theta_z$ are the magnitude and phases of the zeros respectively, and $r_p$ and $\\pm \\theta_p$ are the magnitude and phases of the poles respectively. (Recall that the complex conjugate of $e^{j\\theta}$ is $e^{-j\\theta}$ (you can prove using [Euler's identity](https://randyaliased.github.io/acspjbook/main/fundamental/02_Complex_numbers.html#exponential-form-of-complex-numbers))).\n",
     "\n",
     "\n",
     "<div>\n",
@@ -626,13 +627,12 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "b_0 &= 1  ; b_1 = - 2r_z \\cos\\theta_z  ; b_2 = r_z^{2} \\nonumber \\\\\n",
-    "a_1 &= - 2r_p \\cos\\theta_p  ; a_2 = r_p^{2} \\nonumber\n",
+    "b_0 &= 1  ; \\hspace{0.2cm} b_1 = - 2r_z \\cos\\theta_z  ; \\hspace{0.2cm} b_2 = r_z^{2} \\nonumber \\\\\n",
+    "a_1 &= - 2r_p \\cos\\theta_p  ; \\hspace{0.2cm} a_2 = r_p^{2} \\nonumber\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
-    "\n",
-    "\n",
+    "As opposed to individually specifying the filter coefficients $a_1, a_2, b_1, b_2$, we can rather design the digital filter by specifying the magnitudes and phases of the poles and zeros. For this biquad filter, we essentially have 4 parameters - $r_z, \\theta_z, r_p, \\theta_p$ from which we can obtain a wide range of filter types (low-pass, high-pass, bandpass, notch, etc.). In the interactive plot, you can modify these 4 parameters to see the relation between the positions of the poles and zeros and the magnitude/phase responses of the filters. \n",
     "\n",
     "\n"
    ]
