--- a/book/dasp/04_Z_domain.ipynb
+++ b/book/dasp/04_Z_domain.ipynb
@@ -11,15 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "{\n",
+    "    \"tags\": [\n",
+    "        \"thebe-remove-input-init\",\n",
+    "    ]\n",
+    "}\n",
+    "\n",
     "# Import the necessary packages as usual\n",
     "%pip install ipympl\n",
     "import numpy as np \n",
     "import scipy as sp\n",
     "from scipy import signal\n",
+    "import matplotlib\n",
+    "if not hasattr(matplotlib.RcParams, \"_get\"):\n",
+    "    matplotlib.RcParams._get = dict.get\n",
     "from  matplotlib import patches\n",
     "from matplotlib.ticker import FormatStrFormatter\n",
     "import io\n",
@@ -639,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +700,7 @@
    ],
    "source": [
     "# Setting up the plots\n",
-    "fig, axes = plt.subplot_mosaic([[\"top left\", \"top centre\"],[\"top left\", \"bottom centre\"]])\n",
+    "fig, axes = plt.subplot_mosaic([[\"top left\", \"top centre\"],[\"top left\", \"bottom centre\"]],figsize=(7.5,3))\n",
     "plt.subplots_adjust(wspace=0.5,hspace=0.4)\n",
     "\n",
     "# Create the unit circle\n",
@@ -744,7 +753,6 @@
     "axes[\"bottom centre\"].set_ylim([-np.pi, np.pi])\n",
     "axes[\"bottom centre\"].set_xlim([0, 0.5])\n",
     "# axes[\"bottom centre\"].axis('tight')\n",
-    "plt.show()\n",
     "\n",
     "fs = 44100\n",
     "Ts = 1/fs   # sampling period Ts\n",
@@ -777,9 +785,13 @@
     "    linePh.set_data(freq_axis, angles)\n",
     "    t1.set_data(z.real, z.imag)\n",
     "    t2.set_data(p.real, p.imag)\n",
+    "    fig.canvas.draw_idle()\n",
     "\n",
     "print('Move the slider to see how the filter changes with the positions of the poles and zeros!')\n",
     "interact(update, rz = (0,0.995,0.001), rp = (0,0.995,0.001), thetaz=(0,np.pi,np.pi/16), thetap=(0,np.pi,np.pi/16));\n",
+    "plt.show()\n",
+    "plt.tight_layout()\n",
+    "\n",
     "\n"
    ]
   },
@@ -832,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +896,7 @@
    ],
    "source": [
     "# Setting up the plots\n",
-    "fig, axes = plt.subplot_mosaic([[\"top left\", \"top centre\"],[\"top left\", \"bottom centre\"]])\n",
+    "fig, axes = plt.subplot_mosaic([[\"top left\", \"top centre\"],[\"top left\", \"bottom centre\"]],figsize=(7.5,3))\n",
     "plt.subplots_adjust(wspace=0.5,hspace=0.4)\n",
     "\n",
     "# Create the unit circle\n",
@@ -937,7 +949,6 @@
     "axes[\"bottom centre\"].set_ylim([-np.pi, np.pi])\n",
     "axes[\"bottom centre\"].set_xlim([0, 0.5])\n",
     "# axes[\"bottom centre\"].axis('tight')\n",
-    "plt.show()\n",
     "\n",
     "# Create the interactive plot\n",
     "def update(rz = 0.8, rp = 0.4, theta_o=np.pi/4):\n",
@@ -971,7 +982,9 @@
     "    t2.set_data(p.real, p.imag)\n",
     "\n",
     "print('Move the slider to see how the filter changes with the zero/pole magnitude and centre frequency!')\n",
-    "interact(update, rz = (0,0.99,0.01), rp = (0,0.99,0.01), theta_o=(0,np.pi,np.pi/16)); \n",
+    "interact(update, rz = (0,0.99,0.01), rp = (0,0.99,0.01), theta_o=(0,np.pi,np.pi/16));\n",
+    "plt.show()\n",
+    "plt.tight_layout()\n",
     "\n"
    ]
   },
